14255
Of course, TreeSet.map isn't supposed to get a builder, it's supposed to get a builder factory, but it still shouldn't crash the compiler:

{code}
scala> import scala.collection.immutable._
import scala.collection.immutable._

scala> TreeSet(1, 2, 3)                   
res0: scala.collection.immutable.TreeSet[Int] = TreeSet(1, 2, 3)

scala> res0.map(x => x)(TreeSet.newBuilder[Int])
<console>:9: error: type mismatch;
 found   : scala.collection.generic.Builder[Int,scala.collection.immutable.TreeSet[Int]]
 required: scala.collection.generic.BuilderFactory[Int,?,scala.collection.immutable.TreeSet[Int]]
       res0.map(x => x)(TreeSet.newBuilder[Int])
                                          ^

scala> res0.map(x => x)(TreeSet.newBuilder)     
Exception in thread "main" java.lang.NullPointerException
	at scala.collection.immutable.List$$.map2(List.scala:746)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.adjustTypeArgs(Infer.scala:535)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.inferExprInstance(Infer.scala:1083)
	at scala.tools.nsc.typechecker.Typers$$Typer.adapt(Typers.scala:771)
	at scala.tools.nsc.typechecker.Typers$$Typer.adapt(Typers.scala:768)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3735)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1810)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArgToPoly$$1(Typers.scala:2096)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$31.apply(Typers.scala:2104)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$31.apply(Typers.scala:2104)
	at scala.collection.immutable.List$$.map2(List.scala:747)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:2104)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:3033)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3624)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3782)
	at scala.tools.nsc.typechecker.Typers$$Typer.computeType(Typers.scala:3833)
	at scala.tools.nsc.typechecker.Namers$$Namer.typeSig(Namers.scala:1099)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:451)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:449)
	at scala.tools.nsc.typechecker.Namers$$$$anon$$1.complete(Namers.scala:1246)
	at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:688)
	at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:797)
	at scala.tools.nsc.typechecker.Typers$$Typer.addGetterSetter(Typers.scala:1258)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$11.apply(Typers.scala:1342)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$11.apply(Typers.scala:1342)
	at scala.collection.generic.TraversableTemplate$$$$anonfun$$flatMap$$1.apply(TraversableTemplate.scala:164)
	at scala.collection.generic.TraversableTemplate$$$$anonfun$$flatMap$$1.apply(TraversableTemplate.scala:164)
	at scala.collection.generic.LinearSequenceTemplate$$class.foreach(LinearSequenceTemplate.scala:81)
	at scala.collection.immutable.List.foreach(List.scala:26)
	at scala.collection.generic.TraversableTemplate$$class.flatMap(TraversableTemplate.scala:164)
	at scala.collection.immutable.List.flatMap(List.scala:26)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1342)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1237)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3462)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1747)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.collection.immutable.List$$.loop$$4(List.scala:714)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.collection.immutable.List$$.loop$$4(List.scala:718)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1344)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1237)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3462)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1747)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.collection.immutable.List$$.loop$$4(List.scala:714)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.collection.immutable.List$$.loop$$4(List.scala:718)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1344)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1237)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3462)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1747)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.collection.immutable.List$$.loop$$4(List.scala:714)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1344)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1237)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3462)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1747)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.collection.immutable.List$$.loop$$4(List.scala:714)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1344)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1237)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3462)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1747)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1804)
	at scala.collection.immutable.List$$.loop$$4(List.scala:714)
	at scala.collection.immutable.List$$.mapConserve(List.scala:731)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1804)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3455)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3730)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3771)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:80)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:312)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2$$$$anonfun$$run$$1.apply(Analyzer.scala:50)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2$$$$anonfun$$run$$1.apply(Analyzer.scala:50)
	at scala.collection.Iterator$$class.foreach(Iterator.scala:500)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:280)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.run(Analyzer.scala:50)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:772)
	at scala.tools.nsc.Interpreter$$Request.compile(Interpreter.scala:705)
	at scala.tools.nsc.Interpreter.interpret(Interpreter.scala:422)
	at scala.tools.nsc.Interpreter.interpret(Interpreter.scala:415)
	at scala.tools.nsc.InterpreterLoop.interpretStartingWith(InterpreterLoop.scala:329)
	at scala.tools.nsc.InterpreterLoop.command(InterpreterLoop.scala:306)
	at scala.tools.nsc.InterpreterLoop.processLine$$1(InterpreterLoop.scala:203)
	at scala.tools.nsc.InterpreterLoop.repl(InterpreterLoop.scala:221)
	at scala.tools.nsc.InterpreterLoop.main(InterpreterLoop.scala:377)
	at scala.tools.nsc.MainGenericRunner$$.main(MainGenericRunner.scala:126)
	at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)
{code}
